--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 BUNDLE_ANALYZER=false
-SITE_URL=https://dakomihailov.vercel.com
+SITE_URL=https://dakomihailov.vercel.app
 OPENAI_API_KEY=
 
 # DEV.to
